# micropup-nospeak

./: sdkconfig
bluetooth/: ble_protocol.cc  ble_protocol.h  ble_robot.cpp  ble_robot.h  protocol.h
main/: CMakeLists.txt  crawl_gait.c  crawl_gait.h  gait_common.h  jojo's_bizzare_walks.c  main.c
main/ble/: ble_servo.c  ble_servo.h
main/dog/: dog_config.c  dog_config.h  dog_imu.c
main/reaction/: gyro_balance.c  reaction_config.c  reaction_config.h
webapp/: app.js  index.html  styles.css
